[package]
name = "ksway"
version = "0.1.0"
authors = ["Ashkan Kiani <ashkan.k.kiani@gmail.com>"]
edition = "2018"

[dependencies]
globwalk = "0.7.1"
derive_more = "0.15.0"
try-block = "0.1.0"
serde = { version = "1.0.92", features = ["derive"] }
serde_json = "1.0.39"
itertools = "0.8.0"
byteorder = "1.3.2"
crossbeam-channel = "0.3.8"
