[package]
name = "ksway"
version = "0.1.0"
authors = ["Ashkan Kiani <ashkan.k.kiani@gmail.com>"]
edition = "2018"

[dependencies]
globwalk = "0.7.1"
derive_more = "0.15.0"
serde = { version = "1.0.92", features = ["derive"] }
serde_json = "1.0.39"
itertools = "0.8.0"
byteorder = "1.3.2"
crossbeam-channel = "0.3.8"
num-traits = "0.2.8"
num-derive = "0.2.5"

[dev-dependencies]
json = "0.11.14"
redis = "0.10.0"
log = "0.4.6"
env_logger = "0.6.1"
